--- a/test/browser/documents/nested-refs/a.yaml
+++ b/test/browser/documents/nested-refs/a.yaml
@@ -27,10 +27,17 @@ definitions:
     enum:
     - unauthorized
     - forbidden
+  f:
+    type: object
+    properties:
+      error_type:
+        $ref: '#/definitions/t'
   e:
     type: object
     properties:
       error_type:
         $ref: "#/definitions/t"
-      message:
-        type: string
+      per_property_error_messages:
+        type: array
+        items:
+          $ref: '#/definitions/f'
